<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">家庭留言板</string>
    <string name="main_title">家庭留言板</string>
    <string name="reply">回&#160;&#160;复</string>
    
    <string name="network_not_available">网络不可用</string>
    <string name="network_connectting">正在连接网络</string>
    <string name="device_info_error">设备信息错误，注册失败!</string>
    <string name="register">开始注册用户</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="no_register">用户未注册</string>
    <string name="login">开始登陆&#160;</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="wait">请稍等</string>
    <string name="my_device">我的设备</string>
    
    
    
    <!-- 主界面 -->
    <string name="add">添加</string>
    <string name="myfriend">我的好友</string>
    <string name="familyboard">家庭留言板</string>
    
    <!-- 个人信息界面 -->
    <string name="personal_info">个人信息</string>
    <string name="edit_personal_info">编辑个人信息</string>
    <string name="submit">提&#160;&#160;&#160;&#160;&#160;&#160;交</string>
    <string name="edit_user_name">修改好友昵称</string>
    <string name="input_nick_name">输入新名称</string>
    <string name="prompt_inquiry">提示询问</string>
    <string name="remarkname_is_null">好友昵称不能为空!</string>
    <string name="hint_delfriend">&#160;&#160;删除用户&#60; %s &#62;?</string>
    <string name="cancel">取&#160;&#160;&#160;消</string>
    <string name="confirm">确&#160;&#160;&#160;定</string>
    <string name="save">保&#160;&#160;&#160;存</string>
    <string name="update_icon_success">头像上传成功</string>
    <string name="update_icon_failed">头像上传失败</string>
    <string name="intnet_err">网络访问异常，错误码：%s</string>
    <string name="user_unbind">用户《%s》已经解绑</string>
    <string name="user_bind">用户《%s》已经绑定</string>
    <string name="unbind_failed">删除用户失败</string>
    <string name="gallery">本地相册</string>
    <string name="take_picture">相机拍照</string>
    
       
    <!-- 添加好友界面 -->
    <string name="add_friend">添加好友</string>
    <string name="add_friend_hint">扫一扫上面的二维码图片，加我好友</string>
    <string name="add_friend_error">您的好友已经达到上限，再添加可能会失败，您可以删除其他用户后，再行添加!</string>
    
    <string name="back">&#160;&#160;返回&#160;&#160;</string>
    <string name="contentDesc"></string>
    <string name="page_Indicator">(%1$d / %2$d)</string>
    
    <!-- 视频播放界面 -->
    <string name="play_complete">播放完成</string>
    <string name="play_time">播放进度：%1$02d:%2$02d</string>
    <string name="total_time">影片长度：%1$02d:%2$02d</string>
    
    <!-- 文件浏览界面 -->
    <string name="file_preview">文件预览</string>
    <string name="open_with_otherapp">用其他应用打开</string>
    <string name="hint_open_file">暂时不能打开该文件\r\n你可以用其他应用打开</string>
    <string name="file_open_failed">文件打开失败</string>
    <string name="file_error">下载失败，文件可能已损坏!</string>
    
    <!-- 聊天界面 -->
    <string name="unread_hint">%d条未读消息</string>
    <string name="slide_cancel_send">手指上滑，取消发送</string>
    <string name="release_cancel_send">松开手指，取消发送</string>
    <string name="recorder_too_short">录音 时间过短</string>
    <string name="long_press_to_record">请长按录音按钮进行录音</string>
    <string name="select_picture">选择图片</string>
    <string name="all_pictures">所有图片</string>
    <string name="pic_count">%d &#160;张</string>
    <string name="camera_open_failed">相机打开失败</string>
    <string name="garrly_open_failed">相册打开失败</string>
    <string name="loading">Loading&#160;</string>
    <string name="no_picture">暂无图片</string>
    <string name="send">发&#160;&#160;&#160;&#160;送</string>
    <string name="send_pic">发送(%1$d/%2$d)</string>
    <string name="select_pic_hint">你最多只能选择%d个图片</string>
    <string name="key_error">BaiDuMap API_KEY Error!</string>
    <string name="unknown_location">[位置]未标注</string>
    
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="paste">粘贴</string>
    <string name="cut">剪切</string>
    <string name="selectall">全选</string>
    <string name="no_message">暂无好友留言</string>
    <string name="hint_no_input">请输入消息!</string>
    <string name="load_img_failed">图片下载失败!</string>
    <string name="save_image">正在保存图片&#160;</string>
    <string name="save_image_hint">图片已保存至%s</string>
    <string name="save_image_failed">图片保存失败!</string>
    <string name="is_first_image">已是第一张图片</string>
    <string name="is_last_image">已是最后一张图片</string>
    <string name="progress">%d%%</string>
    
</resources>
