<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="750dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="120dp"
        android:gravity="left|center_vertical"
        android:text="@string/edit_user_name"
        android:textColor="#e0f0f0f0"
        android:textSize="36sp"
        android:background="@drawable/del_user_prompt_inquiry"/>
    
    <EditText 
        android:id="@+id/edt_edit_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_30"
        android:gravity="left|center_vertical"
        android:background="@drawable/del_user_content"
        android:singleLine="true"
        android:maxLength="32"
        android:hint="@string/input_nick_name"
        android:textColor="@color/white"
        android:textSize="32sp"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="@drawable/del_user_cancel"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="@drawable/del_user_confirm"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
