<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="750dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingLeft="120dp"
        android:gravity="left|center_vertical"
        android:text="@string/prompt_inquiry"
        android:textColor="#e0f0f0f0"
        android:textSize="36sp"
        android:background="@drawable/del_user_prompt_inquiry"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" 
        android:background="@drawable/del_user_content">
        <TextView 
	        android:id="@+id/tv_deluser_info"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:paddingLeft="@dimen/dp_10"
	        android:paddingRight="@dimen/dp_20"
	        android:gravity="left|center_vertical"
	        android:ellipsize="middle" 
	        android:singleLine="true"
	        android:maxEms="16"
	        android:text="@string/hint_delfriend"
	        android:textColor="@color/white"
	        android:textSize="32sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="@drawable/del_user_cancel"
            style="?android:attr/buttonBarButtonStyle"/>
        
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="@drawable/del_user_confirm"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
