<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.tcl.wechat"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.tcl.wechat.view.TopBarView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70" 
        custom:title="@string/select_picture"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
        <GridView
	        android:id="@+id/gv_image_select"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="8"
	        android:padding="@dimen/dp_3"
	        android:cacheColorHint="@android:color/transparent"
	        android:clipChildren="true"
	        android:gravity="center"
	        android:horizontalSpacing="@dimen/dp_3"
	        android:listSelector="@android:color/transparent"
	        android:numColumns="8"
	        android:stretchMode="columnWidth"
	        android:verticalSpacing="3dp"
	        android:background="@drawable/bg_border_stroke">
    	</GridView>
    	<Button 
	        android:id="@+id/btn_indicator"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="center"
	        android:layout_margin="@dimen/dp_10"
	        android:padding="@dimen/dp_10"
	        android:text="@string/send"
	        android:textSize="22sp"
	        android:textColor="@color/white"
	        android:onClick="onSendClick"
	        android:background="@drawable/send_btn_disable"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#e0000000"
        android:clickable="true" >
        <TextView
            android:id="@+id/id_choose_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_10"
            android:textSize="18sp"
            android:text="@string/all_pictures"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/id_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/pic_count"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>