<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <ImageView 
        android:id="@+id/img_file_icon" 
        android:layout_width="@dimen/dp_500"
        android:layout_height="@dimen/dp_500"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_400"
        android:src="@drawable/file_def_icon"
        android:scaleType="fitXY"
        android:contentDescription="@string/contentDesc"/>
    
    <TextView 
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@id/img_file_icon"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    
    <ProgressBar 
        android:id="@+id/pbar_file_download"
        android:layout_width="@dimen/dp_800"
        android:layout_height="@dimen/dp_8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_below="@id/tv_file_name"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:visibility="gone"/>
    
    <Button 
        android:id="@+id/btn_file_open"
        android:layout_width="@dimen/dp_600"
        android:layout_height="@dimen/dp_80"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_file_name"
        android:layout_marginTop="@dimen/dp_40"
        android:padding="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/open_with_otherapp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:background="@drawable/submit_btn_selector"
        android:onClick="openFileClick"
        android:visibility="visible"/>
    
    <TextView
        android:id="@+id/tv_file_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_file_open" 
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="left"
        android:text="@string/hint_open_file"
        android:textColor="#88808080"
        android:textSize="18sp"
        android:visibility="visible"/>

</RelativeLayout>
